Fix textAnimationClass hidden overflow

--- a/style.scss
+++ b/style.scss
@@ -2164,6 +2164,8 @@ a {
   justify-content: center;
   align-items: center;
   overflow: hidden;
+  margin-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .textAnimationClassNav {
